--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-airbnb": "^3.1.0",
     "eslint-plugin-react": "^3.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
@@ -36,6 +37,7 @@
     "moment": "^2.11.1",
     "react": "^0.14.6",
     "react-css-modules": "^3.6.4",
+    "react-datepicker": "^0.18.0",
     "react-dom": "^0.14.6"
   }
 }
