--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "write-file-webpack-plugin": "^2.1.2"
   },
   "dependencies": {
+    "medium-editor": "^5.12.0",
     "moment": "^2.11.1",
     "react": "^0.14.6",
     "react-css-modules": "^3.6.4",
     "react-datepicker": "^0.18.0",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-medium-editor": "^1.6.2"
   }
 }
