--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.6.4",
-    "write-file-webpack-plugin": "^3.1.5"
+    "write-file-webpack-plugin": "^3.1.6"
   },
   "dependencies": {
+    "fecha": "^1.2.2",
     "medium-editor": "^5.14.1",
-    "moment": "^2.11.2",
     "react": "^0.14.7",
     "react-css-modules": "^3.7.4",
     "react-datepicker": "^0.20.0",
     "react-dom": "^0.14.7",
-    "react-medium-editor": "^1.6.2"
+    "react-medium-editor": "^1.6.2",
+    "redux-immutable": "^3.0.3",
+    "rxjs-es": "^5.0.0-beta.1"
   }
 }
