--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,14 @@
 {
-	"presets": [
-		"es2015",
-		"stage-0",
-		"react"
-	],
-	"env": {
-		"development": {
-			"presets": ["react-hmre"]
-		}
-	}
+	  "presets": [
+		    "es2015",
+		    "stage-0",
+		    "react"
+	  ],
+    "plugins": [
+    ],
+	  "env": {
+		    "development": {
+			      "presets": ["react-hmre"]
+		    }
+	  }
 }
