Remove custom redux implementation
- Start using standard redux library with rxjs

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,10 +7,10 @@
             2,
             4
         ],
-        "one-var": [
-            2,
-            "always"
-        ],
+        "one-var": [2, {
+            "let": "always",
+            "const": "never"
+        }],
         "id-length": 0,
         "jsx-quotes": [2, "prefer-single"],
         "new-cap": 0
