--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
+    "redux-logger": "^2.5.2",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
@@ -43,6 +44,8 @@
     "react-datepicker": "^0.20.0",
     "react-dom": "^0.14.7",
     "react-medium-editor": "^1.6.2",
+    "react-redux": "^4.4.0",
+    "redux": "^3.3.1",
     "redux-immutable": "^3.0.3",
     "rxjs-es": "^5.0.0-beta.1"
   }
