--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
@@ -47,6 +49,6 @@
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-immutable": "^3.0.3",
-    "rxjs-es": "^5.0.0-beta.1"
+    "rxjs": "^5.0.0-beta.2"
   }
 }
