--- a/package.json
+++ b/package.json
@@ -4,51 +4,52 @@
   "description": "Web app for writing personal journals",
   "main": "dist/index.js",
   "scripts": {
+    "create-index": "create-index --update-index ./src",
     "start": "NODE_ENV=development node ./server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "autoprefixer": "^6.3.3",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "browser-sync": "^2.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint": "^2.2.0",
+    "eslint-config-airbnb": "^6.0.2",
+    "eslint-plugin-react": "^4.1.0",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
-    "redux-logger": "^2.5.2",
+    "postcss-loader": "^0.8.1",
+    "redux-logger": "^2.6.0",
     "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.1",
-    "typescript": "^1.8.0",
-    "webpack": "^1.12.13",
+    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.6.4",
-    "write-file-webpack-plugin": "^3.1.6"
+    "webpack-hot-middleware": "^2.7.1",
+    "write-file-webpack-plugin": "^3.1.8"
   },
   "dependencies": {
     "fecha": "^1.2.2",
     "immutable": "^3.7.6",
-    "medium-editor": "^5.14.1",
+    "medium-editor": "^5.14.4",
     "ramda": "^0.19.1",
     "react": "^0.14.7",
-    "react-css-modules": "^3.7.4",
-    "react-datepicker": "^0.20.0",
+    "react-css-modules": "^3.7.5",
+    "react-datepicker": "^0.23.2",
     "react-dom": "^0.14.7",
-    "react-medium-editor": "^1.6.2",
+    "react-medium-editor": "^1.6.3",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
-    "redux-immutable": "^3.0.3",
+    "redux-immutable": "^3.0.5",
     "rxjs": "^5.0.0-beta.2"
   }
 }
