--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,10 @@
     ],
 	  "env": {
 		    "development": {
-			      "presets": ["react-hmre"]
+			      "presets": ["react-hmre"],
+            "plugins": [
+                "typecheck"
+            ]
 		    }
 	  }
 }
