--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,20 @@
 {
 	  "presets": [
-		    "es2015",
+		    "react",
 		    "stage-0",
-		    "react"
+		    "es2015"
 	  ],
+    "passPerPreset": true,
     "plugins": [
+        ["typecheck", {
+            "disable": {
+                "production": true
+            }
+        }]
     ],
 	  "env": {
 		    "development": {
-			      "presets": ["react-hmre"],
-            "plugins": [
-                "typecheck"
-            ]
+
 		    }
 	  }
 }
