--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.9.1",
-    "write-file-webpack-plugin": "^3.1.8"
+    "webpack-hot-middleware": "^2.9.1"
   },
   "dependencies": {
     "fecha": "^2.0.0",
@@ -47,9 +46,10 @@
     "react-css-modules": "^3.7.5",
     "react-datepicker": "^0.23.2",
     "react-dom": "^0.14.7",
-    "react-medium-editor": "^1.6.3",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
+    "redux-actions": "^0.9.1",
+    "redux-batched-actions": "^0.1.2",
     "redux-immutable": "^3.0.6",
     "rxjs": "^5.0.0-beta.2"
   }
