--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Dear Diary app for learning how to use Observable in real world",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.dev.js",
+    "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.js",
     "lint": "eslint ./src"
   },
   "repository": {
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/channikhabra/Dear-Diary#readme",
   "dependencies": {
+    "normalize-scss": "^5.0.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -30,6 +31,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^1.9.2",
@@ -38,7 +40,10 @@
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-sorting": "^0.2.0",
     "html-webpack-plugin": "^2.21.0",
+    "node-sass": "^3.8.0",
     "redux-logger": "^2.6.1",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.14",
     "webpack-dev-server": "^2.1.0-beta.0"
   }
