--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/channikhabra/Dear-Diary#readme",
   "dependencies": {
+    "moment": "^2.13.0",
     "normalize-scss": "^5.0.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.5.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2"
   },
   "devDependencies": {
