--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
     "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "rxjs": "^5.0.0-beta.9"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
