Make EditEntry work with calendar

--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "moment": "^2.13.0",
     "normalize-scss": "^5.0.3",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.1.0",
+    "react-addons-shallow-compare": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-infinite-calendar": "^1.1.16",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
     "react-router-redux": "^4.0.5",
