--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-sorting": "^0.2.0",
     "html-webpack-plugin": "^2.21.0",
     "node-sass": "^3.8.0",
+    "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
