--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Dear Diary app for learning how to use Observable in real world",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.js",
+    "start": "NODE_ENV=development ./server.js",
     "lint": "eslint ./src"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.0",
     "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.2",
     "css-loader": "^0.23.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-sorting": "^0.2.0",
+    "express": "^4.14.0",
     "html-webpack-plugin": "^2.21.0",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
@@ -55,6 +57,8 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta.14",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.0",
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
