--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-sorting": "^0.2.0",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.21.0",
+    "morgan": "^1.7.0",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.6.1",
